# morphly

./: .gitignore  .vercelignore  DEPLOYMENT_SUCCESS.md  PRICING_UPDATE.md  RELEASE.md  TODO.md  VIRTUAL_CAMERA_IMPLEMENTATION_GUIDEs.md  create-release.sh  package-lock.json  package.json  push.bat  simple_server.py  vercel.json
.github/workflows/: release.yml
.kilocode/: task_history.json
.kilocode/tasks/e2dd890f-1162-48ea-aa12-0b9bc8444548/: api_conversation_history.json  raw_api_payload_2026-04-01T09-51-44-658Z-attempt-0-77w1pc.json  raw_api_payload_2026-04-01T09-52-05-373Z-attempt-1-3uuckg.json  raw_api_payload_2026-04-01T09-52-25-858Z-attempt-2-aehstx.json  raw_api_payload_2026-04-01T09-52-38-961Z-attempt-3-8fc4xb.json  raw_api_payload_2026-04-01T09-52-56-874Z-attempt-4-rlryma.json  raw_api_payload_2026-04-01T09-53-28-254Z-attempt-5-v8zo8g.json  raw_api_payload_2026-04-01T09-54-10-589Z-attempt-6-m1k4qq.json  raw_api_payload_2026-04-01T09-55-28-736Z-attempt-7-nh6h1i.json  raw_api_payload_2026-04-01T09-57-52-363Z-attempt-8-qw5ktk.json  raw_api_payload_2026-04-01T10-02-30-075Z-attempt-9-cn50cv.json  raw_api_payload_2026-04-01T10-11-20-252Z-attempt-10-1rw19f.json  raw_api_payload_2026-04-01T10-21-41-062Z-attempt-11-o9vti4.json  raw_api_payload_2026-04-01T10-31-59-936Z-attempt-12-6f8e1x.json  raw_api_payload_2026-04-01T10-42-25-522Z-attempt-13-733y9m.json  ui_messages.json
.push-fix/: .gitignore
.push-fix/app/: package-lock.json  package.json
.push-fix/app/api/: start-session.ts  supabase.ts  verify-payment.ts  wallet.ts
.push-fix/app/electron/: main.js
.push-fix/app/src/: App.tsx  index.css
.push-fix/app/src/components/: AppLayout.tsx  Loading.tsx  LoadingScreen.tsx  Navigation.tsx  ProtectedRoute.tsx
.push-fix/app/src/lib/: routes.ts
.push-fix/app/src/pages/: Dashboard.tsx  Login.tsx  NotFound.tsx  Settings.tsx  Subscription.tsx  Wallet.tsx
.push-fix/app/src/services/: VirtualCameraService.ts
.push-fix/supabase/: current_schema.sql  seed_plans.sql
api/: admin-audit-log.ts  admin-credit-packages.ts  admin-me.ts  admin-overview.ts  admin-users.ts  credit-packages.ts  end-session.ts  flutterwave-payment.ts  flutterwave-webhook.ts  heartbeat.ts  rate.ts  session-status.ts  start-session.ts  supabase.ts  verify-payment.ts  version.js  version.ts  wallet.ts
app/: .env  .env.example  index.html  info.md  package-lock.json  package.json  server.js  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
app/api/: admin.ts  credit-packages.ts  end-session.ts  flutterwave-webhook.ts  heartbeat.ts  rate.js  rate.ts  session-status.ts  start-session.ts  supabase.ts  verify-payment.ts  version.ts  wallet.ts
app/api/routes/: rate.js
app/electron/: main.js  preload.js  updater.js
app/scripts/: clean-build.cjs  cleanup-stale-sessions.mjs
app/server/: admin-handler.js  flutterwave-payment.js  index.js  package-lock.json  package.json  supabase-admin.js  supabase.js
app/server/routes/: payment.js  session.js
app/src/: App.tsx  env.d.ts
app/src/components/: ErrorBoundary.tsx  Layout.tsx  Navigation.tsx  ProtectedRoute.tsx  Sidebar.tsx  StreamGuideModal.tsx  UpdateBanner.tsx
app/src/components/ui/: card.tsx
app/src/context/: AppContext.tsx  AuthContext.tsx  UIContext.tsx
app/src/hooks/: useApi.ts
app/src/lib/: api-client.ts  billing.ts  desktop-updater.ts  realtime-quality.ts  routes.ts
app/src/pages/: AdminDashboard.tsx  Dashboard.tsx  Settings.tsx  Subscription.tsx  Wallet.tsx
app/src/services/: PortraitCropStream.ts  VirtualCameraService.ts  api.ts  mockApi.ts
native-camera/: CMakeLists.txt
native-camera/baseclasses/: amfilter.cpp  mtype.cpp  winutil.cpp  wxdebug.cpp
native-camera/include/morphly/: morphly_ids.h  morphly_protocol.h  morphly_publisher.h  video_frame_utils.h
native-camera/src/common/: morphly_ids.cpp
native-camera/src/publisher/: morphly_publisher.cpp
native-camera/src/tools/feeder/: main.cpp
native-camera/src/tools/pipe_publisher/: main.cpp
native-camera/src/tools/registrar/: main.cpp
native-camera/src/virtualcam/: dllmain.cpp  mf_dllmain.cpp  mf_virtual_camera_source.cpp  mf_virtual_camera_source.h  virtual_camera_source.cpp  virtual_camera_source.h
shared/: admin-audit.js  admin-auth.js  admin-service.js  backend-logger.js  credit-packages.js  update-manifest.ts  version-manifest-handler.js
supabase/: README.md  admin_dashboard.sql  migration.sql  schema.sql  seed_plans.sql  setup_schema.sql
